syntax = "proto3";

service GameCommunicator {
    // Connects to a game or creates a new one
    //rpc connectToGame(GameRequest) returns (GameResponse){}

    rpc createMatch(MatchRequest) returns (MatchResponse){}

    rpc setDirectionsAndUpdateGame(stream DirectionRequest) returns (stream GameStateRequest) {}
}


    message DirectionRequest {
        int32 snakeNumber = 1;
        int32 snakeDirection = 2;
        int32 gameId = 3;
    }

    message DirectionResponse {
        int32 received = 1;
    }

    message MatchRequest{}

    message MatchResponse {
        int32 gameId = 1;
    }

    message GameStateRequest {
        Map gameState = 1;
    }

    message Map{
        Snake snakeOne = 1;
        Snake snakeTwo = 2;
        Point fruitPosition = 3;
        int32 gameId = 4;
        int32 height = 5;
        int32 width = 6;
        bool gameOver = 7;
    }

    message Point{
        int32 x = 1;
        int32 y = 2;
    }

    message Snake{
            int32 id = 1;
            Point position = 2;
            int32 direction = 3;
            bool won = 4;
            bool lost = 5;
    }
