syntax = "proto3";

service MatchMakingCommunicator {
    // Connects to a game or creates a new one
    rpc getGame(MatchMakingRequest) returns (MatchMakingResponse){}
}


message MatchMakingRequest{}

    message MatchMakingResponse {
        int32 gameId = 1;
        int32 playerId = 2;
    }